# test-d1-flash-bare

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  flash  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  mctl_hal.rs
test-d1-flash-bt0/: Cargo.toml  build.rs
test-d1-flash-bt0/.cargo/: config.toml
test-d1-flash-bt0/src/: ccu.rs  flash.rs  gpio.rs  jtag.rs  log.rs  logging.rs  main.rs  mctl.rs  spi.rs  spi_flash.rs  spi_nor.rs  time.rs  uart.rs
xtask/: Cargo.toml
xtask/src/: gdb_detect.rs  main.rs
