[package]
name = "test-d1-flash-bt0"
version = "0.1.0"
edition = "2021"
authors = [
    "Luo Jia <me@luojia.cc>",
    "Daniel Maslowski <info@orangecms.org>",
    "Yang Derui <ydrml@hotmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d1-pac = { git = "https://github.com/duskmoon314/aw-pac.git", rev = "412a5a4" }
embedded-hal = "1.0.0-alpha.8"
nb = "1"
spin = "0.9"
